# PythonConnectorEuromod

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  INSTALL.md  MANIFEST.in  NOTICE.txt  README.md  config.yaml  importmodule.py  pyproject.toml
docs/: build_docs.py  conf.py  example.ipynb  genindex.html  getstarted.ipynb  index.html  index.md  license.html  objects.inv  package-lock.json  package.json  py-modindex.html  requirements.txt  runtimeconfig.json  search.html  searchindex.js
docs/_build/doctrees/: changelog.doctree  example.doctree  getstarted.doctree  index.doctree  license.doctree  userguide.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/notebooks/: example.doctree  userguide.doctree
docs/_build/html/: .buildinfo  changelog.html  example.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  userguide.html
docs/_build/html/_modules/: index.html
docs/_build/html/_static/: documentation_options.js
docs/_build/html/autoapi/: index.html
docs/_build/jupyter_execute/: example.ipynb  getstarted.ipynb  userguide.ipynb
docs/_build/jupyter_execute/notebooks/: example.ipynb  userguide.ipynb
docs/_build/latex/: euromodconnector.aux  euromodconnector.fdb_latexmk  euromodconnector.fls  euromodconnector.idx  euromodconnector.ilg  euromodconnector.ind  euromodconnector.out  euromodconnector.tex  euromodconnector.toc
docs/_modules/: index.html
docs/_modules/euromod/: container.html  core.html
docs/_sources/: index.md.txt
docs/_sources/autoapi/: index.rst.txt
docs/_sources/notebooks/: example.ipynb.txt  getstarted.ipynb.txt
docs/_static/css/: custom.css  theme.css
docs/_templates/autoapi/: index.rst
docs/autoapi/: index.html  index.rst
docs/autoapi/euromod/: index.html
docs/notebooks/: example.html  example.ipynb  getstarted.html  getstarted.ipynb  userguide.ipynb
docs/source/: conf.py
docs/source/notebooks/: example.ipynb  getstarted.ipynb
src/euromod/: .gitignore  __init__.py  base.py  container.py  core.py  euromod_cli.py  info.py
src/euromod/test/: __init__.py  main.py
src/euromod/utils/: _paths.py  clr_array_convert.py  utils.py
(+21 files in other folders)
