[build-system]
requires = ["setuptools>=64",  "wheel"]
build-backend = "setuptools.build_meta"

[pip.conf]
no-build-isolation = true

[project]
name = "euromod"
version = "0.1.20a" 

requires-python = ">=3.8"
authors = [  
    {name = "Irina Belousova", email = "iri.belousova@gmail.com"},
    {name = "Hannes Serruys", email = "hannes.serruys@ec.europa.eu"},
    {name = "Kostas Manios", email = "kostas.manios@ec.europa.eu"},
        ]
maintainers = [
   {name = "Irina Belousova", email = "iri.belousova@gmail.com"},
   {name = "Hannes Serruys", email = "hannes.serruys@ec.europa.eu"},
            ]
description = "Run the microsimulation model EUROMOD. The latest model and software versions of EUROMOD are available at https://euromod-web.jrc.ec.europa.eu/download-euromod ."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["Euromod", "Microsimulation"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
            ]
dependencies = [ 
  "pandas>=2.0.3 ; platform_system == 'Windows'", 
  "pythonnet>=3.0.2", 
            ]
            
[project.scripts]
euromod = "euromod.euromod_cli:cli"

[project.urls]
GitHub = "https://github.com/ec-jrc/JRC-EUROMOD-software-source-code/tree/master/Connectors/PythonIntegration"
Issues = "https://github.com/ec-jrc/JRC-EUROMOD-software-source-code/tree/master/Connectors/PythonIntegration/discussions"
EUROMOD = "https://euromod-web.jrc.ec.europa.eu/"
Download = "https://euromod-web.jrc.ec.europa.eu/download-euromod"
Documentation = "https://euromod-web.jrc.ec.europa.eu/resources/model-documentation"
Euromod-Online = "https://euromod-web.jrc.ec.europa.eu/info-euromod-online"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
namespaces = false
where = ["src"]
include = ["euromod*"]


